Fixing uneven positioning in responsive mode

--- a/css/handels.css
+++ b/css/handels.css
@@ -8,8 +8,6 @@ div.socials{
 div.github {
     width: 20rem;
     height: 20rem;
-    box-shadow: 0 0.5rem 2rem 0 rgb(148, 148, 148);
     margin-top: 2rem;
-    border-radius: 2rem;
 
 }
